[21] Qualified enum constants should be allowed in switch case #1250 (#1252)
When the expression type is not an enum but the case is (and as a consequence we are forced to use qualified enums as case constants), the SwitchBootstraps#typeSwitch() now requires such arguments to be an EnumDesc#of() constant dynamic, which in turn makes use of a ClassDesc#of().